# bakefile

./: .bzrignore  .cvsignore  .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  COPYING  Dockerfile  Makefile  Makefile.am  NEWS  PACKAGING_LEGACY.md  README  README.md  THANKS  _redirects  bakefile.iss  bakefile.spec  bakefile.vim  bash_completion  bkl  bootstrap  chversion.sh  configure.in  docker-wrapper.sh  index.html  makefile.vc  nginx.conf  params.json  pytest.ini  y_key_2538be779c387fab.html
CVSROOT/: cvswrappers  (+1 more)
bakefile/: AUTHORS  Makefile.am  NEWS  README  THANKS  autogen.sh  bakefile.iss  bakefile.spec  bakefile.vim  configure.in  makefile.vc
bakefile/admin/: .cvsignore  python-devel.m4  swig.m4
bakefile/autoconf/: bakefile-lang.m4  bakefile.m4  bk-deps  bk-make-pch  dllar.sh  merge-scripts.py  shared-ld-sh
bakefile/debian/: bakefile.doc-base  changelog  control  rules
bakefile/doc/: Makefile.am  commands.docbook  datafiles.docbook  faq.docbook  formats.docbook  manpage.docbook  manual.docbook  process.sh  style.css  targets.docbook  tutorial.docbook  variables.docbook
bakefile/doc/html/: style.css
bakefile/output/: _hdr_makefile.empy  autoconf-macros.empy  autoconf.empy  borland-opts.empy  borland.empy  cbuilderx.py  dmars.empy  gnumake.empy  mingw-opts.empy  mingw.empy  msevc4prj.py  msvc.empy  msvc6prj.py  watcom.empy  xcode2.py
bakefile/presets/: fake.bkl  simple.bkl
bakefile/rules/: FORMATS.bkmanifest  autoconf.bakefile  autoconf.bkl  borland.bkl  cbuilderx.bkl  common.bkl  datafiles.bkl  dirs.bakefile  dmars.bkl  dmars_common.bkl  filecopy.bkl  format_features.bkl  gnu.bkl  makefile.bakefile  makefile.bkl  makefile_borland.bakefile  makefile_borland.bkl  makefile_defs_borland.bkl  makefile_defs_dmars.bkl  makefile_defs_dmars_common.bkl  makefile_defs_dmars_smake.bkl  makefile_defs_gnu.bkl  makefile_defs_mingw.bkl  makefile_defs_msvc.bkl  makefile_defs_unix.bkl  makefile_defs_watcom.bkl  makefile_macres.bkl  makefile_mingw.bkl  makefile_os2.bkl  makefile_unix.bakefile  mingw.bkl  msevc4prj.bkl  msvc.bkl  msvc6prj.bkl  msvc_common.bkl  msvc_prj_common.bkl  msvc_utils.py  symbian.bkl  unixlike.bakefile  vc5.bakefile  (+7 more)
bakefile/rules/gettext/: common.bkl
bakefile/src/: .cvsignore  bakefile.py  bakefile_gen.py  bottlenecks.c  config.py  dependencies.py  errors.py  finalize.py  flatten.py  formats.py  mk.py  mk_dump.py  outmethods.py  portautils.py  reader.py  utils.py  win32scriptwrapper.c  writer.py  xmlparser.py
bakefile/src/empy/: README  em.py
bakefile/tests/: Bakefiles.bkgen  REGEN  configure.in  root.bakefile  root.bkl
bakefile/tests/cond/: hello.bakefile  hello.bkl
bakefile/tests/debug/: debug.bkl
bakefile/tests/dll/: dll.bakefile  libfile.c
bakefile/tests/filelist/: filelist.bkl
bakefile/tests/gettext/: de.po  gettext.bakefile
bakefile/tests/hello/: hello.bakefile
bakefile/tests/pch/: pch.bkl  pch.cpp  precompiled.h
bakefile/tests/regressions/: cleanfiles.bkl  regressions.bkl
tests/: Bakefiles.bkgen  README  __init__.py  bootstrap  configure.in  conftest.py  dumper.py  indir.py  root.bkl  test_builder.py  test_full.py  test_interpreter.py  test_parser.py  test_plumbing.py  vcproj-validate  vcproj2003.xsd  vcproj2005.xsd
tests/cond/: hello.bkl
tests/cond_install/: cond_install.bkl
tests/condlinking/: condlinking.bkl  hello.c  main.c
tests/condvar_transitivity/: condvar_transitivity.bkl  hello.h
tests/datafiles/: datafiles.bkl
tests/debug/debug_hello/: keep
tests/defineglobaltag/: defineglobaltag.bkl
tests/definetag/: definetag.bkl  source1.c  source2.c
tests/dll/: dll.bkl
tests/echo/: echo.bkl
tests/envvar/: envvar.bkl
tests/error/: error.bkl
tests/features/: features.bkl
tests/filelist/: filelist.bkl
tests/gettext/: gettext.bkl  zh_CN.mo
tests/headers/: headers.bkl  hello.c  hello.h
tests/headers/test/: hello.h
tests/hello/: hello.bakefile  hello.bkl  hello.c  hello.cpp
tests/includeonce/: included.bkl  includeonce.bkl
tests/isdefined/: isdefined.bkl
tests/language_tests/: README  definetag-inheritance.bkl  tag-merging.bkl
tests/module/: module.bkl
tests/parse_errors/: 220_incorrect_cond_if.bkl  condvar_or_operator.bkl  malformed_cond01.bkl  malformed_cond02.bkl  option-invalid-default.bkl  parse_error01.bkl  substfromdict.bkl  undefvar.bkl  undefvar02.bkl  undefvar03.bkl  undefvar04.bkl  value_with_invalid_expr.bkl
tests/paths/: hello1.c  hello2.c  hello3.c  paths.bkl
tests/paths/src/: hello4.c
tests/pch/: pch.bkl  pch.cpp
tests/pkgconfig/: pkgconfig.bkl  test.pc.in
tests/projects/: .gitignore
tests/projects/action/: action.bkl  action.model
tests/projects/anchors/: bad_anchor.bkl
tests/projects/cflags/: cflags.bkl  cflags.model
tests/projects/cond_defines/: cond_defines.bkl  cond_defines.model  hello.c
tests/projects/conditional/: conditional.bkl  conditional.model  debug.c
tests/projects/configs/: custom_config.bkl  custom_config.model  hello.cpp  helpers.cpp
tests/projects/dll/: dll.bkl  dll.model  helpers.cpp
tests/projects/generated_files/: generated_files.bkl  generated_files.model  gensrc2.txt  main.cpp  make_gensrc.py
tests/projects/hello_world/: hello.c  hello_world.bkl  hello_world.model
tests/projects/msvs/: properties.bkl  properties.model  single_project.bkl  single_project.model
tests/projects/no_toolsets_set/: dont_set_toolsets.bkl
tests/projects/postbuild/: postbuild.bkl  postbuild.model  test.cpp
tests/projects/properties/: dont_set_toolsets.model  set_toolsets_bad.model  set_toolsets_good.bkl  set_toolsets_good.model
tests/projects/settings/: hello.cpp  settings.bkl  settings.model
tests/regressions/: cleanfiles.bkl  depends-on-file.bkl  onefilemultipleconds.bkl  regressions.bkl  win32rcflags.bkl  win32rcflags2.bkl
tests/subproject/: subproject.bkl
tests/test_model/: exception_in_target_if.bkl  exception_in_target_if.model  paths.bkl  paths.model  referenced_list.bkl  referenced_list.model
tests/test_parsing/: bakefile_0_2.bkl  version_old.bkl  version_very_old.bkl
tests/variants/: hello.c  variants.bkl
(+384 files in other folders)
