AC_PREREQ(2.53)

AC_INIT([bakefile], [0.1.9.1], [vslavik@fastmail.fm])

AC_CONFIG_SRCDIR([autogen.sh])
AC_CONFIG_AUX_DIR([admin])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(1.6)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PATH_PYTHON(2.2.2)
dnl PYTHON_DEVEL comes from SWIG 1.3.20+ and detects needed -I, -L and -l:
BKL_PYTHON_DEVEL

AC_OUTPUT([Makefile])
