AC_PREREQ(2.53)

AC_INIT([bakefile], [0.2.7], [vslavik@fastmail.fm])

AC_CONFIG_SRCDIR([bakefile.vim])
AC_CONFIG_AUX_DIR([admin])

AC_CANONICAL_BUILD
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(1.6)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

AM_PATH_PYTHON(2.3.0)
dnl PYTHON_DEVEL comes from SWIG 1.3.20+ and detects needed -I, -L and -l:
BKL_PYTHON_DEVEL


dnl Enable building of docs in maintainer mode:
if test "x$USE_MAINTAINER_MODE" = "xyes"; then
    build_docs=yes
else
    build_docs=no
fi

AM_CONDITIONAL(BUILD_DOCS, test $build_docs = yes)


AC_OUTPUT([
        Makefile
        doc/Makefile
    ])
