AC_PREREQ(2.53)
AC_INIT(aclocal.m4)

AC_CANONICAL_SYSTEM

AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP



# this is used to test if <subproject>s (and their 'install' and 'install-strip' targets)
# are correctly handled when using conditional targets
AC_ARG_ENABLE([datafiles], AC_HELP_STRING([--enable-datafiles],
         [Enables the datafiles subproject (default is no)]), [], [enable_datafiles=no])

AC_MSG_CHECKING([for the --enable-datafiles option])
if test "$enable_datafiles" = "yes"; then
    DATAFILES=1
    AC_MSG_RESULT([yes])
else
    DATAFILES=0
    AC_MSG_RESULT([no])
fi



AC_BAKEFILE([m4_include(autoconf_inc.m4)])

AC_OUTPUT([
           Makefile
           cond/Makefile
           cond_install/Makefile
           datafiles/Makefile
           debug/Makefile
           dll/Makefile
           echo/Makefile
           error/Makefile
           filelist/Makefile
           gettext/Makefile
           hello/Makefile
           library/Makefile
           module/Makefile
           paths/Makefile
           pch/Makefile
           regressions/Makefile
           subproject/Makefile
         ])
